--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+.DS_Store
 node_modules
+/dist
+
+# local env files
+
+.env.local
+.env.\*.local
+
+# Log files
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log\*
+
+# Editor directories and files
+
+.idea
+.vscode
+_.suo
+_.ntvs\*
+_.njsproj
+_.sln
+\*.sw?
